<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Operation -->
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>

    <!-- Title -->
    <string name="app_name">RES</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="acc">Account: </string>
    <string name="pwd">Password: </string>
    <string name="name">Name: </string>
    <string name="email">Email: </string>
    <string name="content">Content: </string>
    <string name="phone">Phone: </string>
    <string name="to">To: </string>
    <string name="from">From: </string>
    <string name="keyword">KeyWord: </string>
    <string name="subject">Subject: </string>
    <string name="identity">Identity: </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="meeting">Meeting: </string>
    <string name="topic">Topic: </string>
    <string name="with">With: </string>
    <string name="message">Message: </string>
    <string name="address">Address: </string>
    <string name="number">Number: </string>
    <string name="area">Area: </string>
    <string name="apt">Apartment: </string>
    <string name="postby">Post by:</string>
    <string name="owner">Owner: </string>
    <string name="image">Image</string>
    <string name="reply">Reply</string>


</resources>
